security/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flora
  labels:
    name: flora
